--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --inspect --ignore-watch node_modules src/server.ts",
-    "knex:migrate": "yarn knex --knexfile knexfile.ts migrate:latest"
+    "knex:migrate": "yarn knex --knexfile knexfile.ts migrate:latest",
+    "prestart": "yarn knex --knexfile knexfile.ts migrate:latest",
+    "start": "node dist/server.js",
+    "postinstall": "tsc",
+    "watch-node": "nodemon dist/server.js",
+    "watch-ts": "tsc -w",
+    "deploy": "git add . && git commit -m Heroku && git push heroku master"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
