--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/express-fileupload": "^1.1.7",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/secure-random-password": "^0.2.0",
+    "@types/uuid": "^8.3.1",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
   },
@@ -29,11 +31,13 @@
     "cpf-cnpj-validator": "^1.0.3",
     "date-fns": "^2.21.3",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.5",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "secure-random-password": "^0.2.2",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "uuid": "^8.3.2"
   }
 }
