--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "cors": "^2.8.5",
     "cpf-cnpj-validator": "^1.0.3",
     "date-fns": "^2.21.3",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
+    "imgbb-uploader": "^1.3.3",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.5",
     "multer": "^1.4.2",
